WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274138
[UnifiedPDF] Two-up layouts are not centered
https://bugs.webkit.org/show_bug.cgi?id=274138
Summary
[UnifiedPDF] Two-up layouts are not centered
Simon Fraser (smfr)
Reported
2024-05-13 21:37:49 PDT
Need to take the inter-page margin into account.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-05-13 21:38:15 PDT
<
rdar://problem/128042484
>
Simon Fraser (smfr)
Comment 2
2024-05-13 21:43:21 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28517
EWS
Comment 3
2024-05-14 07:56:48 PDT
Committed
278758@main
(1fdc4a13e9f8): <
https://commits.webkit.org/278758@main
> Reviewed commits have been landed. Closing PR #28517 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug