[UnifiedPDF] Two-up layouts are not centered https://bugs.webkit.org/show_bug.cgi?id=274138 rdar://128042484

Reviewed by Tim Horton.

When computing the centering of two-up page rows, we need to take the margin between the two pages into account.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/PDFDocumentLayout.mm:
(WebKit::PDFDocumentLayout::layoutTwoUpColumn):

Canonical link: https://commits.webkit.org/278758@main